test_board commit

--- a/main/webapp/WEB-INF/classes/messages/common.properties
+++ b/main/webapp/WEB-INF/classes/messages/common.properties
@@ -17,8 +17,9 @@ member.logintitle=로그인하기
 member.login=로그인
 member.saveId=아이디 저장
 member.logout=로그아웃
+member.mypages=마이페이지
 
-member.login.status={0}({1})님 로그인..
+member.login.status={0}({1})님 로그인...
 
 # 생년월일
 birth.yy=년도(4자)
